samples/_failures_safe/1761224318_0e862c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88a1717c.c: In function ‘determinant_3x3’:
./samples/SAFE/__tmp_88a1717c.c:145: error: expected ‘{’ at end of input
